# funding-fee-bot

./: AGENTS.md  README.md  pyproject.toml
docs/architecture/: funding-fee-fetcher.md  market-data-provider.md
docs/plans/: 2026-02-15-funding-fee-fetcher-design.md  2026-02-15-funding-fee-fetcher-implementation.md  2026-02-15-market-data-provider-refactor-design.md  2026-02-15-market-data-provider-refactor-implementation.md
docs/product/: vision.md
src/funding_fee_bot/domain/: __init__.py  capabilities.py  errors.py  interfaces.py
src/funding_fee_bot/domain/models/: __init__.py  funding.py  opportunity.py  orderbook.py  spot.py
src/funding_fee_bot/providers/: __init__.py  binance.py  bitget.py  bybit.py  ccxt_base_provider.py
src/funding_fee_bot/providers/ccxt/: __init__.py  core.py  funding_base.py  orderbook_base.py  spot_base.py
src/funding_fee_bot/service/: __init__.py  funding_service.py  market_data_service.py  opportunity_discovery_service.py
tests/: conftest.py
tests/integration/: test_binance_live.py
tests/unit/: test_package_smoke.py
tests/unit/domain/: test_capabilities.py  test_errors.py  test_interfaces.py  test_models.py  test_models_funding.py  test_models_orderbook.py  test_models_spot.py
tests/unit/providers/: test_binance_provider.py  test_bitget_provider.py  test_bybit_provider.py  test_ccxt_base_provider_current.py  test_ccxt_base_provider_current_all.py  test_ccxt_base_provider_history.py  test_ccxt_core_provider.py
tests/unit/service/: test_funding_service.py  test_market_data_service.py  test_opportunity_discovery_service.py
(+2 files in other folders)
