[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funding-fee-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.0",
    "pysocks>=1.7.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
